--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "04-bar-chart-animated",
+  "name": "06-components-responsive",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "d3": "^5.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
