--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "07-teachable-machine-chart",
+  "name": "07-pie-chart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
