--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "d3": "^5.12.0",
-    "ml5": "^0.4.2",
+    "d3": "^7.3.0",
+    "ml5": "^0.10.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^5.0.0",
     "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
